# paper-reader

./: .gitignore  README.ja.md  README.md  pyproject.toml
examples/: sample_config.md
src/paper_reader/: __init__.py  __main__.py  cli.py  extractor.py  models.py  ocr.py  utils.py
src/paper_reader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_extractor.py
